[gd_scene load_steps=28 format=2]

[ext_resource path="res://fonts/Rubik-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/pickableObject.gd" type="Script" id=2]
[ext_resource path="res://sprites/ui/green_boxCheckmark.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/red_boxCross.png" type="Texture" id=4]
[ext_resource path="res://sprites/defenses/turret_single.tres" type="SpriteFrames" id=5]
[ext_resource path="res://sfx/ui/click_003.ogg" type="AudioStream" id=6]
[ext_resource path="res://effects/particles/dirt_01.png" type="Texture" id=7]
[ext_resource path="res://sfx/turret/321215__hybrid-v__sci-fi-weapons-deploy.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/turret/minimize_003.ogg" type="AudioStream" id=9]
[ext_resource path="res://sfx/turret/impactSoft_heavy_000.ogg" type="AudioStream" id=10]
[ext_resource path="res://effects/particles/smoke_05.png" type="Texture" id=11]
[ext_resource path="res://sfx/ui/click_005.ogg" type="AudioStream" id=12]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.67027, 1 )
colors = PoolColorArray( 0.629883, 0.381403, 0.123024, 1, 0.71, 0.544925, 0.3905, 0.901961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 0.4
_data = [ Vector2( 0, 0.0881818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.146364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.83
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 1 )
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 180.0
initial_velocity = 107.85
angular_velocity = 171.97
angular_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.83
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 1 )
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 180.0
initial_velocity = 186.28
angular_velocity = 49.41
angular_velocity_random = 0.29
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=7]
radius = 35.2881

[sub_resource type="CircleShape2D" id=8]
radius = 222.316

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Groupe/AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, 0.1 ]
}

[sub_resource type="Animation" id=15]
length = 2.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Groupe/AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Groupe/AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.39, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1.05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ImpactSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmokeParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DirtParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DeployementSound:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PickableObject" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="SmokeParticles" type="Particles2D" parent="."]
position = Vector2( 0, 30 )
emitting = false
amount = 20
lifetime = 1.1
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 11 )

[node name="DirtParticles" type="Particles2D" parent="."]
position = Vector2( 0, 30 )
emitting = false
amount = 10
lifetime = 0.6
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 6 )
texture = ExtResource( 7 )

[node name="Groupe" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Groupe"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Groupe/Area2D"]
position = Vector2( 0, -8.5 )
shape = SubResource( 7 )

[node name="AttackArea" type="Area2D" parent="Groupe"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Groupe/AttackArea"]
position = Vector2( 0, -27 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Groupe"]
position = Vector2( 0, -39 )
rotation = 1.66448e-08
scale = Vector2( 1, 1.05 )
frames = ExtResource( 5 )
animation = "SW"

[node name="VBoxContainer" type="VBoxContainer" parent="Groupe"]
margin_left = -67.0
margin_top = -187.0
margin_right = 75.0
margin_bottom = -89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Groupe/VBoxContainer"]
margin_right = 142.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 9 )
text = "Place?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Groupe/VBoxContainer"]
margin_top = 47.0
margin_right = 142.0
margin_bottom = 98.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="Groupe/VBoxContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 3 )
expand_icon = true

[node name="No" type="Button" parent="Groupe/VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 142.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 4 )
expand_icon = true

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 8.036
pitch_scale = 0.64
bus = "Effect"

[node name="DeployementSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.098
bus = "Effect"

[node name="YesSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effect"

[node name="NoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Effect"

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Effect"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/moving = SubResource( 14 )
anims/place = SubResource( 15 )

[node name="AttackTimer" type="Timer" parent="."]
[connection signal="mouse_entered" from="Groupe/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Groupe/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="area_entered" from="Groupe/AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="area_exited" from="Groupe/AttackArea" to="." method="_on_AttackArea_area_exited"]
[connection signal="pressed" from="Groupe/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Groupe/VBoxContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
